<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true"
    android:fadingEdge="none"
    android:adjustViewBounds="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/background_light_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_marginTop="22dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View style="@style/Divider" />

            <LinearLayout
                android:paddingLeft="22dp"
                android:paddingRight="22dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/card_number_layout"
                    android:paddingTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/sepaDirectDebit_ibanField_title"
                            android:textSize="12sp" />

                        <ImageView
                            android:src="@drawable/lock_icon"
                            android:layout_alignParentRight="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </RelativeLayout>

                    <com.adyen.ui.views.IBANEditText
                        android:id="@+id/adyen_sepa_iban_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sepaDirectDebit_ibanField_placeholder"
                        android:inputType="textCapCharacters|textNoSuggestions"
                        android:focusable="true"
                        android:textAllCaps="true"
                        android:gravity="center_vertical" />

                </LinearLayout>

                <LinearLayout
                    android:paddingTop="22dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/sepaDirectDebit_nameField_title"
                        android:id="@+id/card_holder_name_label"
                        android:textSize="12sp" />

                    <com.adyen.ui.views.CardHolderEditText
                        android:id="@+id/adyen_bank_account_holder_name"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sepaDirectDebit_nameField_placeholder"
                        android:inputType="textCapWords"
                        android:focusable="true" />

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/layout_direct_debit_consent"
                    android:paddingTop="22dp"
                    android:paddingBottom="12dp"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/layout_click_area_consent_checkbox"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.adyen.ui.views.CheckoutCheckBox
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:checked="false"
                            android:id="@+id/consent_direct_debit_checkbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_toLeftOf="@+id/consent_direct_debit_checkbox"
                            android:paddingRight="20dp"
                            android:text="@string/sepaDirectDebit_consentButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </RelativeLayout>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

        <View style="@style/Divider" />

            <RelativeLayout
                android:layout_margin="22dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.adyen.ui.views.CheckoutButton
                        style="@style/adyenRoundCheckoutButton"
                        android:padding="20dp"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/collect_direct_debit_data"
                        android:enabled="false"/>

                </FrameLayout>

                <TextView
                    android:textSize="20sp"
                    android:id="@+id/amount_text_view"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ProgressBar
                    android:indeterminateDrawable="@drawable/get_paid_progress_bar"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/processing_progress_bar"
                    android:indeterminate="true"
                    android:visibility="invisible"/>

            </RelativeLayout>

    </LinearLayout>

</ScrollView>